AnalisadorSintatico/gramatica
program         ::= { stmt }

stmt            ::= decl ";" | assign ";" | if_stmt | for_stmt | block

decl            ::= type identifier {";" | "=" expr}

assign          ::= identifier "=" expr ";"

type            ::= "int" | "float" | "char" | "bool"

if_stmt         ::= "if" "(" expr ")" "{" block "}"

for_stmt        ::= "for" "(" decl ";" expr ";" assign ")" "{" block "}"

block           ::= "{" { stmt } "}"

expr            ::= term { ("+" | "-" | "*" | "/" | ">" | "<" | "==" | "!=" | "^" | "<=" | ">=" | "&&" | "||") term } ";"

term            ::= identifier | number | literal | "(" expr ")"

identifier      ::= [a-zA-Z_][a-zA-Z0-9_]
number          ::= [0-9]+ ("." [0-9]+)
literal         ::= '"' .* '"' | '\'' .
